--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -87,6 +87,22 @@ input {
     font-weight: bold;
 }
 
+.alert {
+    padding: 1rem;
+    font-family: inherit;
+    color: rgb(53, 52, 52);
+    border-radius: 4px;
+    letter-spacing: 2px;
+}
+
+.alert-success {
+    background-color: rgba(105, 245, 158, 0.64);
+}
+
+.alert-danger {
+    background-color: rgba(250, 58, 58, 0.43);
+}
+
 @media(min-width: 768px) {
     .form {
         max-width: 600px;
