Added myUrl page and dashboard

--- a/src/wrappers/Center.css
+++ b/src/wrappers/Center.css
@@ -38,4 +38,8 @@
         .activation-page {
             max-width: 500px;
         }
+        .main-center {
+            width: 80%;
+            margin: 2rem auto;
+        }
     }
