--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,11 @@
     justify-content: space-around;
     align-items: center;
     margin-bottom: .5rem;
+    background: #D76125;
+    background: -webkit-linear-gradient(right, #D76125, #A83253);
+    background: -moz-linear-gradient(right, #D76125, #A83253);
+    background: linear-gradient(to left, #D76125, #A83253);
+    color: #fff;
 }
 
 .links {
@@ -21,12 +26,14 @@
     text-decoration: none;
     font-size: 1.2rem;
     padding: .5rem;
+    color: #fff;
 }
 
 .title {
     font-size: 2rem;
     margin: 0;
     padding: .5rem;
+    color: #fff;
 }
 
 .link:hover {
